disunity-derive/tests/15-invalid-discriminant-type.stderr
error: expected a primitive integer type (like u8)
 --> tests/15-invalid-discriminant-type.rs:4:27
  |
4 | #[disunity(discriminant = str)]
  |                           ^^^
